# aoc

./: .gitignore  CMakeLists.txt  README.md  aoc_input.py  new_day.sh  run_c.sh  run_day.py  setup.sh
2015/day01/: CMakeLists.txt  solution.c  solution.cpp  solution.py
2015/day02/: solution.c  solution.cpp  solution.py
2015/day03/: solution.c  solution.cpp  solution.py
2015/day04/: solution.c  solution.py
common/: CMakeLists.txt
common/include/: aoc_utils.h  aoc_utils.hpp
common/src/: aoc_utils.c  aoc_utils.cpp
templates/: CMakeLists.txt.tpl  solution.c.tpl  solution.cpp.tpl  solution.py.tpl
